# arcor-setup-3

./: README.md
art_empty_arm/: CMakeLists.txt  package.xml
art_empty_arm/config/: robot.yaml
art_empty_arm/launch/: bringup.launch
art_empty_arm/src/art_empty_arm/: node.py
art_empty_arm_interface/: CMakeLists.txt  package.xml  setup.py
art_empty_arm_interface/src/art_empty_arm_interface/: __init__.py  art_empty_arm_interface.py
art_setup_3/: CMakeLists.txt  package.xml
art_setup_3/config/: gui-plugins.yaml
art_setup_3/launch/: bringup.launch  debug_touch.launch  detectors.launch  kinect.xml
art_setup_3/scripts/: init_db.py  load_params  save_params  start
