<?xml version="1.0"?>
<package>

    <name>art_empty_arm</name>
    <version>0.0.0</version>
    <description>The art_empty_arm package</description>

    <maintainer email="zdenal@todo.todo">zdenal</maintainer>

    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>

    <test_depend>roslaunch</test_depend>

</package>
