<?xml version="1.0"?>
<package format="2">
  <name>art_empty_arm_interface</name>
  <version>0.0.0</version>
  <description>The art_empty_arm_interface package</description>

  <maintainer email="zdenal@todo.todo">zdenal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>art_brain</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>art_brain</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>art_brain</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
